--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "onlygetpost",
+  "name": "only-get-post",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com/tw1997/onlyGetPost.git"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --watch --progress --hide-modules",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
